[FIX] web_enterprise: mobile breadcrumb title alignment
Step to reproduce:

On mobile, open sales, the title inside the breadcrumb
isn't verticaly aligned with the search icon.

Task ID: 2200099

closes odoo/enterprise#9494

Related: odoo/odoo#48376

--- a/web_enterprise/static/src/scss/control_panel_layout.scss
+++ b/web_enterprise/static/src/scss/control_panel_layout.scss
@@ -23,12 +23,17 @@
             overflow: hidden;
 
             > li {
-                margin: auto 0;
+                margin: 0;
+
                 &:before {
                     display: none;
                 }
 
                 &.o_back_button {
+                    &, & ~ li {
+                        margin: auto 0;
+                    }
+
                     &:before {
                         font-family: FontAwesome;
                         content: ""; // fa-arrow-left
